8336313: [lworld] C2 compilation hits asserts with -XX:VerifyIterativeGVN=11